# ez_openmmlab

./: .gitignore  Guide_for_adding_new_model.md  LICENSE  README.md  install-cpu.sh  install.sh  publish.sh  pyproject.toml  todo.md
.github/workflows/: publish.yml  windows-test.yml
conductor/: product.md  tech-stack.md  tracks.md
conductor/archive/augmentation_section_20260219/: metadata.json  plan.md  spec.md
conductor/archive/config_refactor_20260129/: index.md  metadata.json  plan.md  spec.md
conductor/archive/consolidate_config_20260209/: metadata.json  spec.md
conductor/archive/custom_config_loading_20260202/: metadata.json  plan.md
conductor/archive/engine_refactor_20260207/: index.md  metadata.json  plan.md
conductor/archive/engine_solid_refactor_20260209/: index.md
conductor/archive/implement_ezmmpose_20260130/: metadata.json
conductor/archive/improve_engine_init_20260209/: plan.md  spec.md
conductor/archive/improve_engine_readability_20260131/: index.md  metadata.json
conductor/archive/inference_cli_20260127/: index.md  metadata.json
conductor/archive/lazy_result_formatting_20260210/: plan.md
conductor/archive/move_engines_to_core_20260209/: metadata.json  spec.md
conductor/archive/refine_resource_resolution_20260209/: spec.md
conductor/archive/rename_injectors_20260208/: metadata.json  plan.md
conductor/archive/rtmpose_param_expansion_20260213/: index.md  metadata.json  spec.md
conductor/archive/testing_infra_20260129/: spec.md
conductor/archive/unified_inference_result_20260131/: plan.md
conductor/tracks/augmentation_section_20260219/: index.md  plan.md  spec.md
conductor/tracks/consolidate_config_20260209/: index.md  plan.md
conductor/tracks/custom_config_loading_20260202/: index.md  plan.md  spec.md
conductor/tracks/dynamic_dataset_registration_20260211/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/engine_refactor_20260207/: plan.md  spec.md
conductor/tracks/engine_solid_refactor_20260209/: metadata.json  plan.md  spec.md
conductor/tracks/implement_ezmmpose_20260130/: index.md  plan.md  spec.md
conductor/tracks/implement_mmdeploy_20260311/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/improve_engine_init_20260209/: index.md  metadata.json
conductor/tracks/improve_engine_readability_20260131/: plan.md  spec.md
conductor/tracks/inference_cli_20260127/: plan.md  spec.md
conductor/tracks/lazy_result_formatting_20260210/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/move_engines_to_core_20260209/: index.md  plan.md
conductor/tracks/refine_resource_resolution_20260209/: index.md  metadata.json  plan.md
conductor/tracks/rename_injectors_20260208/: index.md  spec.md
conductor/tracks/rtmpose_param_expansion_20260213/: plan.md  spec.md
conductor/tracks/unified_inference_result_20260131/: index.md  metadata.json  plan.md  spec.md
demos/: README.md  demo_export.py  demo_resume_training.py  demo_rtmdet-bbox.py  demo_rtmdet-segmentation.py  demo_rtmo.py  demo_rtmpose.py  demo_train.py  demo_trained_micro_cub.py  test_user_config_input.py  train_micro_cub.py
demos/coco_mini/: dataset.toml
demos/coco_mini/annotations/: train.json
demos/demo_rtmdet_training/: last_checkpoint  rtmdet_tiny_COCO_Mini.py  user_config.toml
demos/demo_rtmdet_training/20260225_034746/vis_data/: config.py  scalars.json
docs/: pose_guide.md
install/: README.md  install-cpu.sh  install-gpu.sh
libs/mmdetection/: pyproject.toml
libs/mmdetection/configs/rtmdet/: rtmdet_l_8xb32-300e_coco.py
libs/mmdetection/mmdet/datasets/: coco.py
libs/mmpose/: pyproject.toml
src/ez_openmmlab/: __init__.py  _check_deps.py  cli.py
src/ez_openmmlab/cli/: __init__.py  model_factory.py
src/ez_openmmlab/core/: base.py  config_builder.py  config_loader.py  config_manager.py  datasets.py  formatters.py  handlers.py  results.py
src/ez_openmmlab/core/deploy/: config_modifier.py  docker_manager.py  registry.py
src/ez_openmmlab/core/derivers/: __init__.py  base.py  default.py  factory.py  rtmpose.py
src/ez_openmmlab/core/engines/: engine_base.py  mmdet.py  mmpose.py
src/ez_openmmlab/core/handlers/: __init__.py  base.py  common.py  mmdet.py  mmpose.py
src/ez_openmmlab/core/inference/: __init__.py  formatters.py  results.py
src/ez_openmmlab/core/injectors/: __init__.py  base.py  common.py  dataloader.py  evaluator.py  mmdet.py  mmpose.py  optimizer.py  pipeline_patchers.py  runtime.py  structural.py
src/ez_openmmlab/core/params_resolvers/: __init__.py  rtmpose.py
src/ez_openmmlab/core/resolvers/: __init__.py  base.py  factory.py  resource_resolver.py  rtmpose.py
src/ez_openmmlab/core/schema/: config.py  datasets.py
src/ez_openmmlab/core/surgery/: __init__.py  base.py  pipeline_patchers.py  rebinders.py
src/ez_openmmlab/core/training/: orchestrator.py
src/ez_openmmlab/core/utils/: constants.py  context.py  download.py  path.py
src/ez_openmmlab/engines/: mmdet.py  mmpose.py
src/ez_openmmlab/schemas/: dataset.py  model.py
src/ez_openmmlab/utils/: context.py  converters.py  download.py  input.py  path.py  toml_config.py
tests/: __init__.py  verify_config.py
tests/data/coco_mini/: dataset.toml
tests/e2e/: test_cli.py  test_smoke.py
tests/integration/: test_custom_config_flow.py  test_engine_integration.py  test_regression.py  test_result_migration.py  test_rtmpose_custom_training.py
tests/unit/: test_augmentation_config.py  test_augmentation_validation.py  test_base_custom_config.py  test_base_helpers.py  test_config_builder.py  test_config_loader.py  test_config_manager.py  test_config_manager_augments.py  test_config_manager_refinement.py  test_config_saving.py  test_deploy_registry.py  test_detector.py  test_detector_custom_config.py  test_docker_manager.py  test_dynamic_registration.py  test_engine_base_init.py  test_engine_solid_logic.py  test_formatters.py  test_handlers.py  test_injectors.py  test_path_utils.py  test_pose.py  test_pose_custom_config.py  test_pose_injector_refinement.py  test_results.py  test_schemas.py  test_toml_config.py
(+17 files in other folders)
