[project]
name = "ez-openmmlab"
version = "0.1.0"
description = "An API designed to make OpenMMLab EZ"
readme = "README.md"
requires-python = ">=3.9,<3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Justin Nacu", email = "engr.nacu@gmail.com"}
]
keywords = ["openmmlab", "mmdetection", "mmpose", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies only - no PyTorch, no MMCV
dependencies = [
    "mmengine>=0.10.7",
    "openmim>=0.3.9",
    "mmdet>=3.0.0",
    "mmpose>=1.0.0",
    "chumpy==0.70",
    "pycocotools>=2.0.7",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "loguru>=0.7.3",
    "tomli-w>=1.2.0",
    "tomli>=2.4.0",
    "numpy>=1.24.4,<2.0.0",
    "opencv-python==4.8.0.76",
    "requests>=2.32.5",
    "albumentations==2.0.6",
]

[project.urls]
Homepage = "https://github.com/JustAnalyze/ez_openmmlab"
Documentation = "https://github.com/JustAnalyze/ez_openmmlab#readme"
Repository = "https://github.com/JustAnalyze/ez_openmmlab"
"Bug Tracker" = "https://github.com/JustAnalyze/ez_openmmlab/issues"

[project.scripts]
ez-mmlab = "ez_openmmlab.cli:app"

# Development dependencies (including PyTorch for local dev)
[dependency-groups]
dev = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",
    "mmcv==2.1.0",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[tool.uv]
managed = true
package = true

# Custom indexes for development only
[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[[tool.uv.index]]
name = "mmcv-gpu"
url = "https://download.openmmlab.com/mmcv/dist/cu117/torch2.0/index.html"
format = "flat"
explicit = true

[tool.uv.sources]
# Map dev dependencies to custom indexes
torch = { index = "pytorch-gpu", marker = "extra == 'dev'" }
torchvision = { index = "pytorch-gpu", marker = "extra == 'dev'" }
torchaudio = { index = "pytorch-gpu", marker = "extra == 'dev'" }
mmcv = { index = "mmcv-gpu", marker = "extra == 'dev'" }

[build-system]
requires = ["setuptools>=69.5.1,<81", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
    "ignore:Failed to add .*:UserWarning",
    "ignore:torch.meshgrid:UserWarning",
    "ignore:The bbox is out of bounds:UserWarning",
    "ignore:The polygon is out of bounds:UserWarning",
]
