[project]
name = "mmdet"
version = "3.3.0"
description = "Minimal wrapper for mmdet"
# We list these as dynamic so setuptools looks at setup.py instead of crashing here
dynamic = ["dependencies", "optional-dependencies", "readme", "authors", "classifiers", "keywords", "license"]
requires-python = ">=3.9,<3.11"

[build-system]
requires = ["torch==2.0.1", "setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
